# GRASP

./: .gitignore  CITATION.cff  README.md  bisection_run.csv  pyproject.toml  quick_bisect_test.py  quick_compare_test.py  quick_diag_test.py  quick_engine_test.py  quick_export_test.py  quick_hybrid_test.py  quick_newton_test.py  quick_secant_test.py  quick_stab_test_local.py  quick_test.py  report.md  requirements.deploy.txt  requirements.txt  test_benchmarks_local.py
examples/: cosx_minus_x.ps1  cubic.ps1  exp_minus_3x.ps1
numerical-ui/: package-lock.json  package.json
numerical-ui/src/: App.js  BadgePills.js  DiagnosticsLegend.js  EventTimeline.js  ExperimentsDashboard.js  Home.js  Home_backup.js  RunViewer.js  diagnosticsBadges.js  diagnosticsHints.js
scripts/: regen_p1_p4.py  sweep_all_4problems_newton_secant.py  sweep_compare_4problems_1000.py  sweep_newton.py  sweep_secant.py
src/: main.py
src/Numerical_Solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/numerical_lab/: api.py  cli.py
src/numerical_lab/analytics/: audit_consistency.py  interpretation.py  interpretation_confidence.py  (+4 more)
tests/: test_adaptive_boundary.py  test_bench_convergence.py  test_brent_compare.py  test_brent_manual.py  test_event_linking.py  test_explanations.py  test_failure_modes.py  test_hybrid_events.py  test_hybrid_intelligence_export.py  test_iterations_never_exceed_max_iter.py  test_quick.py  test_root_solvers.py  test_safe_expr.py  test_secant_max_iter_cap_runtime.py  test_smoke.py  test_trace_dir.py  test_trace_json.py  test_trace_schema_v11.py
(+52 files in other folders)
